# gist-static-analyzer

./: .gitignore  CMakeLists.txt  configure
include/llvm/: InitializePasses.h
include/llvm/Support/: AlignOf.h
include/llvm/Transforms/: Instrumentation.h
lib/Transforms/: CMakeLists.txt  Makefile
lib/Transforms/DebugInfoLocator/: CMakeLists.txt  DebugInfoLocator.cpp  DebugInfoLocator.h  Makefile
lib/Transforms/DebugInfoManager/: CMakeLists.txt  DebugInfoManager.cpp  DebugInfoManager.h  Makefile
lib/Transforms/DynInstMarker/: CMakeLists.txt  DynInstMarker.cpp  DynInstMarker.h  Instrumenter.cpp  Makefile  README
lib/Transforms/Giri/: CMakeLists.txt  Giri.cpp  Giri.h  Makefile
lib/Transforms/IRPrinter/: CMakeLists.txt  IRPrinter.cpp  Makefile
lib/Transforms/Instrumentation/: CMakeLists.txt  Instrumentation.cpp  IntelPTInstrumentor.cpp  IntelPTInstrumentor.h
lib/Transforms/IntelPTInstrumentor/: CMakeLists.txt  IntelPTInstrumentor.cpp  IntelPTInstrumentor.h  Makefile
lib/Transforms/SrcToLLVM/: CMakeLists.txt  Makefile  SrcToLLVM.cpp  SrcToLLVM.h
lib/Transforms/StaticSlicer/: CMakeLists.txt  Makefile  StaticSlicer.cpp  StaticSlicer.h
lib/Transforms/TypeBasedDebugInfo/: CMakeLists.txt  Makefile  TypeBasedDebugInfo.cpp  TypeBasedDebugInfo.h
projects/: LLVMBuild.txt
projects/giri/: CREDITS.TXT  LICENSE.TXT  Makefile  Makefile.common.in  configure
projects/giri/autoconf/: aclocal.m4  configure.ac  mkinstalldirs
projects/giri/autoconf/autom4te.cache/: output.1  requests  traces.0  traces.1
projects/giri/include/giri/: FindFlows.h  config.h.in
projects/giri/lib/: Makefile
projects/giri/lib/Static/: FindFlows.cpp  Makefile
projects/poolalloc/include/dsa/: CallTargets.h  DSCallGraph.h  DSGraph.h  DSNode.h  DataStructure.h  super_set.h
projects/poolalloc/include/poolalloc/: Heuristic.h  PoolAllocate.h
projects/poolalloc/lib/DSA/: core
projects/poolalloc/lib/PoolAllocate/: PoolAllocate.cpp
projects/poolalloc/tools/WatchDog/: WatchDog.cpp
tools/clang/lib/CodeGen/: BackendUtil.cpp
tools/clang/www/: cxx_dr_status.html  cxx_status.html
