add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(DebugInfoManager)
add_subdirectory(StaticSlicer)
add_subdirectory(IntelPTInstrumentor)
add_subdirectory(SrcToLLVM)
add_subdirectory(IRPrinter)
